# c_learn

./: CMakeLists.txt  main.c
docs/: Clion环境搭建.doc  cmake使用.md  pthread.md  参考资料.md  常见知识点.md  常见问题..md  环境安装.md
function/: function.c  function.h  function_main.c
memory/: malloc_1.c  memory_main.c
network/: clientSocket.c  serverSocket.c
pthread/: thread.c  thread.h  thread_main.c
src/: main.c
src/function/: function.c  function.h  main.c
test/: test_main.c
